<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Driver Number -->
    <LinearLayout
        android:id="@+id/id_card_license_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/id_card_driver_number"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.nhncloud.android.ocr.SecureTextView
            android:id="@+id/id_card_license_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_nhncloud_text_color="@color/white"
            app:com_nhncloud_text_size="18sp"
            app:com_nhncloud_text_style="bold"/>
    </LinearLayout>

    <!-- Name -->
    <LinearLayout
        android:id="@+id/id_card_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/id_card_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.nhncloud.android.ocr.SecureTextView
            android:id="@+id/id_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_nhncloud_text_color="@color/white"
            app:com_nhncloud_text_size="18sp"
            app:com_nhncloud_text_style="bold"/>
    </LinearLayout>

    <!-- Resident number  -->
    <LinearLayout
        android:id="@+id/id_card_resident_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/id_card_resident_number"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.nhncloud.android.ocr.SecureTextView
            android:id="@+id/id_card_resident_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_nhncloud_text_color="@color/white"
            app:com_nhncloud_text_size="18sp"
            app:com_nhncloud_text_style="bold"/>
    </LinearLayout>

    <!-- Serial Number  -->
    <LinearLayout
        android:id="@+id/id_card_serial_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:letterSpacing="-0.01"
            android:text="@string/id_card_serial_number"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.nhncloud.android.ocr.SecureTextView
            android:id="@+id/id_card_serial_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_nhncloud_text_color="@color/white"
            app:com_nhncloud_text_size="18sp"
            app:com_nhncloud_text_style="bold"/>
    </LinearLayout>

    <!-- License Type  -->
    <LinearLayout
        android:id="@+id/id_card_license_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:letterSpacing="-0.01"
            android:text="@string/id_card_license_type"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.nhncloud.android.ocr.SecureTextGroup
            android:id="@+id/id_card_license_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_nhncloud_text_color="@color/white"
            app:com_nhncloud_text_size="18sp"
            app:com_nhncloud_text_style="bold"/>
    </LinearLayout>

    <!-- License Condition  -->
    <LinearLayout
        android:id="@+id/id_card_license_condition_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:letterSpacing="-0.01"
            android:text="@string/id_card_license_condition"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.nhncloud.android.ocr.SecureTextView
            android:id="@+id/id_card_license_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_nhncloud_text_color="@color/white"
            app:com_nhncloud_text_size="18sp"
            app:com_nhncloud_text_style="bold"/>
    </LinearLayout>


    <!-- Issue Date  -->
    <LinearLayout
        android:id="@+id/id_card_issue_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:letterSpacing="-0.01"
            android:text="@string/id_card_issue_date"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.nhncloud.android.ocr.SecureTextView
            android:id="@+id/id_card_issue_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_nhncloud_text_color="@color/white"
            app:com_nhncloud_text_size="18sp"
            app:com_nhncloud_text_style="bold"/>
    </LinearLayout>

    <!-- Issuer  -->
    <LinearLayout
        android:id="@+id/id_card_issuer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:letterSpacing="-0.01"
            android:text="@string/id_card_issuer"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.nhncloud.android.ocr.SecureTextView
            android:id="@+id/id_card_issuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_nhncloud_text_color="@color/white"
            app:com_nhncloud_text_size="18sp"
            app:com_nhncloud_text_style="bold"/>
    </LinearLayout>
</LinearLayout>